@@ -4694,6 +4694,8 @@ v0.33.20        10-Feb-2002
 		For points in echomail no seen-by entry is added.
 		The AreaMgr and FileMgr responses and notify messages now use
 		the diesel macro language.
+		The tic file forward function now uses only filenames in the
+		subject of the netmail messages without the path.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
